--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"> 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
-	<title>Startpage</title>
+	<title>New Tab</title>
 </head>
 
 <body>
@@ -539,7 +539,7 @@ switch (monthday) {
 	
 // Current Bitcoin Price Function	
 function btcprice() {
-var currency = "CAD";
+var currency = "USD";
 var apiurl = 'https://api.coindesk.com/v1/bpi/currentprice/' + currency + '.json';
     
 $.ajax({
