--- a/index.html
+++ b/index.html
@@ -47,23 +47,26 @@
 			<div id="search">
 				<input id="search-bar" type="text" placeholder="search" />
 				<div id="links">
-					<p class="reddit-links">
-						<a href="http://reddit.com/"><div class="link category reddit-cat">reddit</div></a> 
-						<a id="reddit-link-1" href="http://reddit.com/r/hiphopheads"><span class="link reddit reddit1">hiphopheads</span></a> 
-						<a id="reddit-link-2" href="http://reddit.com/r/streetwear"><span class="link reddit reddit2">streetwear</span></a> 
-						<a id="reddit-link-3" href="http://reddit.com/r/webdev"><span class="link reddit reddit3">webdev</span></a> 
+					<p class="chan-links">
+						<a href=""><div class="link category chan-cat">chans</div></a> 
+						<a id="chan-link-1" href="https://8ch.net/tech/catalog.html"><span class="link chan chan1">/tech/</span></a> 
+						<a id="chan-link-2" href="https://boards.4chan.org/g/catalog"><span class="link chan chan2">/g/</span></a> 
+						<a id="chan-link-3" href="https://boards.4chan.org/an/catalog"><span class="link chan chan3">/an/</span></a>
+						<a id="chan-link-4" href="https://boards.4chan.org/ck/catalog"><span class="link chan chan4">/ck/</span></a>
+						<a id="chan-link-5" href="https://murdercube.com/files/"><span class="link chan chan5">/cube/</span></a>
 					</p>
 					<p class="news-links">
 						<a href=""><div class="link category news-cat">news</div></a> 
-						<a id="news-link-1" href="https://arstechnica.com/"><span class="link news news1">ars technica</span></a> 
-						<a id="news-link-2" href="http://theverge.com/"><span class="link news news2">the verge</span></a> 
-						<a id="news-link-3" href="https://techcrunch.com/"><span class="link news news3">techcrunch</span></a> 
+						<a id="news-link-1" href="https://forum.voidlinux.eu/latest"><span class="link news news1">Void Forum</span></a> 
+						<a id="news-link-2" href="https://distrowatch.com/"><span class="link news news2">DistroWatch</span></a> 
+						<a id="news-link-3" href="https://kiwifarms.is/"><span class="link news news3">KiwiFarms</span></a> 
 					</p>
 					<p class="code-links">
 						<a href=""><div class="link category code-cat">code</div></a> 
-						<a id="code-link-1" href="https://github.com/"><span class="link code code1">github</span></a> 
-						<a id="code-link-2" href="http://codepen.io/"><span class="link code code2">codepen</span></a> 
-						<a id="code-link-3" href="https://www.codewars.com/"><span class="link code code3">codewars</span></a> 
+						<a id="code-link-1" href="https://github.com/galaxite"><span class="link code code1">github</span></a> 
+						<a id="code-link-2" href="https://gitgud.io/users/sign_in"><span class="link code code2">gitgud</span></a>
+						<a id="code-link-3" href="https://doc.rust-lang.org/book/second-edition/ch01-00-introduction.html"><span class="link code code3">rust</span></a>
+						<a id="code-link-4" href="https://github.com/josephmisiti/awesome-machine-learning/blob/master/books.md"><span class="link code code4">machine learning</span></a> 
 					</p>
 				</div>
 			</div>
