--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 						<a id="chan-link-3" href="https://boards.4chan.org/an/catalog"><span class="link chan chan3">/an/</span></a>
 						<a id="chan-link-4" href="https://boards.4chan.org/ck/catalog"><span class="link chan chan4">/ck/</span></a>
 						<a id="chan-link-5" href="https://murdercube.com/files/"><span class="link chan chan5">/cube/</span></a>
+						<a id="chan-link-6" href="https://boards.4chan.org/wg/catalog"><span class="link chan chan6">/wg/</span></a>
+						<a id="chan-link-7" href="https://wallhalla.com/"><span class="link chan chan7">/wall/</span></a>
 					</p>
 					<p class="news-links">
 						<a href=""><div class="link category news-cat">news</div></a> 
