--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<a href=""><div class="link category news-cat">news</div></a> 
 						<a id="news-link-1" href="https://forum.voidlinux.eu/latest"><span class="link news news1">Void Forum</span></a> 
 						<a id="news-link-2" href="https://distrowatch.com/"><span class="link news news2">DistroWatch</span></a> 
-						<a id="news-link-3" href="https://kiwifarms.is/"><span class="link news news3">KiwiFarms</span></a> 
+						<a id="news-link-3" href="https://kiwifarms.net/"><span class="link news news3">KiwiFarms</span></a> 
 					</p>
 					<p class="code-links">
 						<a href=""><div class="link category code-cat">code</div></a> 
