--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="bookmark-set">
                 <div class="bookmark-title">Misc</div>
                 <div class="bookmark-inner-container">
-		    <a class="bookmark" href="https://mail.protonmail.com/login" target="_blank">Protonmail</a>
+		    <a class="bookmark" href="https://mail.protonmail.com/login" target="_blank">ProtonMail</a>
                     <a class="bookmark" href="https://the-eye.eu/public/" target="_blank">The Eye</a>
                     <a class="bookmark" href="https://app.remote.it/auth/#/sign-in" target="_blank">remote.it</a>
                     <a class="bookmark" href="https://wallhalla.com/" target="_blank">Wallhalla</a>
@@ -78,7 +78,7 @@
             let date = new Date(),
                 min = date.getMinutes(),
                 sec = date.getSeconds(),
-                hour = date.getHours() + 19;
+                hour = date.getHours() + 20;
 
             return "" + 
                 (hour < 10 ? ("0" + hour) : hour) + ":" + 
