--- a/index.html
+++ b/index.html
@@ -26,40 +26,40 @@
             <div class="bookmark-set">
                 <div class="bookmark-title">Chans</div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://8ch.net/tech/catalog.html" target="_blank">/tech/</a>
-                    <a class="bookmark" href="https://boards.4channel.org/g/catalog" target="_blank">/g/</a>
-                    <a class="bookmark" href="https://boards.4channel.org/an/catalog" target="_blank">/an/</a>
-                    <a class="bookmark" href="https://boards.4channel.org/ck/catalog" target="_blank">/ck/</a>
-                    <a class="bookmark" href="https://boards.4chan.org/wg/catalog" target="_blank">/wg/</a>                    
+                    <a class="bookmark" href="https://8ch.net/tech/catalog.html">/tech/</a>
+                    <a class="bookmark" href="https://boards.4channel.org/g/catalog">/g/</a>
+                    <a class="bookmark" href="https://boards.4channel.org/an/catalog">/an/</a>
+                    <a class="bookmark" href="https://boards.4channel.org/ck/catalog">/ck/</a>
+                    <a class="bookmark" href="https://boards.4chan.org/wg/catalog">/wg/</a>                    
                 </div>
             </div>
             <div class="bookmark-set">
                 <div class="bookmark-title">Entertainment</div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://youtube.com" target="_blank">Youtube</a>
-                    <a class="bookmark" href="https://kiwifarms.net" target="_blank">The Farms</a>
-                    <a class="bookmark" href="https://r-a-d.io/" target="_blank">r-a-d.io</a>
-                    <a class="bookmark" href="https://overthewire.org/wargames/" target="_blank">Over the Wire</a>
+                    <a class="bookmark" href="https://youtube.com">Youtube</a>
+                    <a class="bookmark" href="https://kiwifarms.net">The Farms</a>
+                    <a class="bookmark" href="https://r-a-d.io/">r-a-d.io</a>
+                    <a class="bookmark" href="https://overthewire.org/wargames/">Over the Wire</a>
                 </div>
             </div>
             <div class="bookmark-set">
             <div class="bookmark-title">Tech</div>
                 <div class="bookmark-inner-container">
-                    <a class="bookmark" href="https://github.com" target="_blank">Github</a>
-                    <a class="bookmark" href="https://gitgud.io/users/sign_in" target="_blank">Gitgud</a>
-                    <a class="bookmark" href="https://doc.rust-lang.org/book/" target="_blank">Rust Docs</a>
-                    <a class="bookmark" href="https://crates.io/" target="_blank">Rust Crates</a>
-                    <a class="bookmark" href="https://wiki.installgentoo.com/index.php/Main_Page" target="_blank">InstallGentoo Wiki</a>                    
-                    <a class="bookmark" href="https://distrowatch.com" target="_blank">Distrowatch</a>
+                    <a class="bookmark" href="https://github.com">Github</a>
+                    <a class="bookmark" href="https://gitgud.io/users/sign_in">Gitgud</a>
+                    <a class="bookmark" href="https://doc.rust-lang.org/book/">Rust Docs</a>
+                    <a class="bookmark" href="https://crates.io/">Rust Crates</a>
+                    <a class="bookmark" href="https://wiki.installgentoo.com/index.php/Main_Page">InstallGentoo Wiki</a>                    
+                    <a class="bookmark" href="https://distrowatch.com">Distrowatch</a>
                 </div>
             </div>
             <div class="bookmark-set">
                 <div class="bookmark-title">Misc</div>
                 <div class="bookmark-inner-container">
-		    <a class="bookmark" href="https://mail.protonmail.com/login" target="_blank">ProtonMail</a>
-                    <a class="bookmark" href="https://the-eye.eu/public/" target="_blank">The Eye</a>
-                    <a class="bookmark" href="https://app.remote.it/auth/#/sign-in" target="_blank">remote.it</a>
-                    <a class="bookmark" href="https://wallhalla.com/" target="_blank">Wallhalla</a>
+		    <a class="bookmark" href="https://mail.protonmail.com/login">ProtonMail</a>
+                    <a class="bookmark" href="https://the-eye.eu/public/">The Eye</a>
+                    <a class="bookmark" href="https://app.remote.it/auth/#/sign-in">remote.it</a>
+                    <a class="bookmark" href="https://wallhalla.com/">Wallhalla</a>
                 </div>
             </div>
         </div>
